--- a/styles.css
+++ b/styles.css
@@ -1,116 +1,148 @@
-#p_error{
-color: red;
+#p_error {
+  color: red;
 }
 
-#cabecera{
-  background-color: #C8D4E7;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#cabecera {
+  background-color: #c8d4e7;
   height: 100px;
   margin: 25px;
   text-align: center;
 }
 
-#txb_usuario{
-    background-color:#C8D4E7 ;
-    margin-top: 3vw;
+#txb_usuario {
+  background-color: #c8d4e7;
+  margin-top: 3vw;
   /*  background: url(./images/user-solid.svg) no-repeat scroll 2px 2px;*/
-    text-align: center;
-    padding: 7px 32px;
-    width: 300px;
-    border:none;
-}
-#txb_contraseña{
-    background-color:#C8D4E7 ;
-    margin: 3vw;
- /*   background: url(./images/lock-solid.svg) no-repeat scroll 2px 2px;*/
-   text-align: center;
-   padding: 7px 32px;
+  text-align: center;
+  padding: 7px 32px;
   width: 300px;
-  border:none;
+  border: none;
+}
+#txb_contraseña {
+  background-color: #c8d4e7;
+  margin: 3vw;
+  /*   background: url(./images/lock-solid.svg) no-repeat scroll 2px 2px;*/
+  text-align: center;
+  padding: 7px 32px;
+  width: 300px;
+  border: none;
 }
 
-#caja_ingreso{
-    margin-top: 120px;
-    text-align:center
+#caja_ingreso {
+  margin-top: 120px;
+  text-align: center;
 }
 
-button{
-    width: 171px;
-    border-radius: 3px;
-    background-color:#C8D4E7 ;
-        margin-left: -50px;
+button {
+  width: 171px;
+  border-radius: 3px;
+  background-color: #c8d4e7;
+  margin-left: -50px;
 }
 
-a{
-    margin-top: 10px;
+a {
+  margin-top: 10px;
 }
 
-.dv_link_contraseña .dv_link_usuario{
-   margin-top: 10px;
-   margin-left: 75px;
+.dv_link_contraseña .dv_link_usuario {
+  margin-top: 10px;
+  margin-left: 75px;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #C8D4E7;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
+  background-color: #c8d4e7;
+  overflow: hidden;
+  height: 68px;
+}
 
-    color: #1F53A7;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #8f9ac9;
-    color: rgb(255, 255, 255);
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #8f9ac9;
-    color: rgb(255, 255, 255);
-  }
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
 
-  .grilla{
-      height: 35px;
-      background-color:#C8D4E7;
-      margin: 5px;
-      border-style: solid;
-      text-align: center;
-      width: 260px;
-      align-items: center;
-     /* background: url(./images/file-solid.svg) no-repeat scroll 2px 2px;*/
-      border-color: #C8D4E7;
-      color: #1F53A7;
-      
-  }
+  color: #1f53a7;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-  #items{
-     margin-top: 100px;
-     margin-left: 500px;
-  }
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #8f9ac9;
+  color: rgb(255, 255, 255);
+}
 
-  .button {
-    background-color: #A3BADE; 
-    border: none;
-    color:#1F53A7;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #8f9ac9;
+  color: rgb(255, 255, 255);
+}
 
-h1{color: #1F53A7;}
+.grilla {
+  height: 35px;
+  background-color: #c8d4e7;
+  margin: 5px;
+  border-style: solid;
+  text-align: center;
+  width: 260px;
+  align-items: center;
+  /* background: url(./images/file-solid.svg) no-repeat scroll 2px 2px;*/
+  border-color: #c8d4e7;
+  color: #1f53a7;
+}
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color:#1F53A7;
+#items {
+  margin-left: 40%;
+  margin-top: 5%;
+  margin-right: 40%;
+}
+
+.button {
+  background-color: #a3bade;
+  border: none;
+  color: #1f53a7;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+h1 {
+  color: #1f53a7;
+}
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #1f53a7;
   opacity: 1; /* Firefox */
+}
+
+.flex-container {
+  display: flex;
+}
+
+.flex-child {
+  flex: 1;
+}
+
+.flex-child:first-child {
+  margin-right: 20px;
+}
+
+#btn_ingresar {
+  margin-left: 82%;
+}
+
+#lnk_recuperar_contraseña {
+  margin-right: 82%;
+}
+
+#lnk_crear_usuario {
+  margin-right: 88%;
 }
